--- a/css/iosOverlay.css
+++ b/css/iosOverlay.css
@@ -18,7 +18,7 @@
   font-weight: bold;
   text-align: center;
   display: block;
-  font-size: 15px;
+  font-size: 18px;
   position: absolute;
   bottom: 30px;
   left: 0;
@@ -27,6 +27,7 @@
 .ui-ios-overlay img {
   display: block;
   margin: 20% auto 0 auto;
+  width: 50px;
 }
 .ui-ios-overlay .spinner {
   left: 50% !important;
