--- a/css/iosOverlay.css
+++ b/css/iosOverlay.css
@@ -8,7 +8,7 @@
   margin-left: -100px;
   margin-top: -100px;
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#cc000000,endColorstr=#cc000000);
-  background: #3cb371;
+  background: #1abc9c;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
